<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    android:fillViewport="true"
    android:foregroundTint="#551E1E"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E7D2F1"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="#070707"
            android:importantForAccessibility="no"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textColor="#304FFE"
            android:textColorHighlight="#F6EEEE"
            android:textColorHint="#304FFE"
            android:textSize="34sp"
            app:flow_horizontalAlign="center"
            app:flow_verticalAlign="center"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/car_1"
            android:textColor="#000207"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:srcCompat="@drawable/car_20" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/car_10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/car_2"
            android:textColor="#455A64"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/car_21" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/car_3"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/car_3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/car_4"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/imageView7"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/car_4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/car_5"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/imageView8"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:srcCompat="@drawable/car_1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/car_6"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/imageView9"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/car_6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/car_7"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/imageView10"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:srcCompat="@drawable/car_22" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/car_8"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/imageView11"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:srcCompat="@drawable/car_9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/car_9"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/car_12" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/car_10"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
